--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,15 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off
+                    </argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
