chore: replace uri with env var

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/cookaroo_db
+      uri: ${MONGO_URI}
       auto-index-creation: true
   config:
     import: "optional:file:.env[.properties]"
