--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -1,7 +1,9 @@
 spring:
   data:
     mongodb:
-      uri: ${MONGO_URI}
       auto-index-creation: true
-  config:
-    import: "optional:file:.env[.properties]"
+
+logging:
+  level:
+    root: INFO
+    d.p.cookaroo: DEBUG
