Update SonarCloud workflow configuration

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,4 +1,4 @@
-name: SonarCloud
+name: CI + SonarCloud
 
 on:
   push:
@@ -10,7 +10,6 @@ jobs:
   build-and-analyze:
     runs-on: ubuntu-latest
 
-    # We run everything inside the backend folder
     defaults:
       run:
         working-directory: backend
@@ -19,7 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # SonarCloud needs full history for some features
+          fetch-depth: 0  # needed for proper blame & branch analysis
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -28,7 +27,7 @@ jobs:
           java-version: '21'
           cache: 'maven'
 
-      - name: Build, test and generate coverage
+      - name: Build, test & coverage
         run: mvn -B clean verify -Pcoverage
 
       - name: SonarCloud analysis
@@ -36,8 +35,5 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B sonar:sonar \
-            -Dsonar.projectKey=pandahawk_cookaroo \
-            -Dsonar.organization=pandahawk \
-            -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=$SONAR_TOKEN \
             -Dsonar.branch.name=${{ github.ref_name }}
