Update sonarcloud.yml to use sonar.token

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -39,5 +39,5 @@ jobs:
             -Dsonar.projectKey=pandahawk_cookaroo \
             -Dsonar.organization=pandahawk \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.token=$SONAR_TOKEN \
             -Dsonar.branch.name=${{ github.ref_name }}
