test: try to clean the ci pipe

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,7 +29,16 @@
     </scm>
     <properties>
         <java.version>21</java.version>
+        <!-- Keeps your JVM warning fixes -->
         <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+        <!-- SonarCloud configuration -->
+        <sonar.projectKey>pandahawk_cookaroo</sonar.projectKey>
+        <sonar.organization>pandahawk</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <!-- Coverage report path -->
+        <sonar.coverage.jacoco.xmlReportPaths>
+            target/site/jacoco/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencyManagement>
