test: remove necessary flags in pipe

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -44,6 +44,7 @@
             **/core/id/**,
             **/*Exception.java
         </sonar.exclusions>
+        <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
     </properties>
 
     <dependencyManagement>
