chore: add remaining tests

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,10 +3,9 @@ FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
 
 COPY pom.xml .
-RUN mvn -q -e -B dependency:go-offline
-
 COPY src ./src
-RUN mvn -q -e -B package
+
+RUN mvn -e -B -ntp package
 
 
 # ------ Run ------
