--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,7 +32,7 @@
         <!-- Keeps your JVM warning fixes -->
         <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
         <!-- SonarCloud configuration -->
-        <sonar.projectKey>pandahawk_cookaroo</sonar.projectKey>
+        <sonar.projectKey>cookaroo-backend</sonar.projectKey>
         <sonar.organization>pandahawk</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.exclusions>
