chore: expand ci to include angular app too

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -7,7 +7,10 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-analyze:
+  # ===========================
+  #  BACKEND (Java + Maven)
+  # ===========================
+  backend-build-and-analyze:
     runs-on: ubuntu-latest
 
     # We work from the backend module
@@ -28,7 +31,7 @@ jobs:
           java-version: '21'
           cache: 'maven'
 
-       # 1) Build, test, and generate JaCoCo report (with coverage profile)
+      # 1) Build, test, and generate JaCoCo report (with coverage profile)
       - name: Build, test & generate JaCoCo report
         run: mvn -B clean verify -Pcoverage
 
@@ -39,7 +42,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:5.3.0.6276:sonar \
-            -Dsonar.token=$SONAR_TOKEN \
+            -Dsonar.token=$SONAR_TOKEN
 
       # 3) Sonar analysis for MAIN BRANCH pushes
       - name: SonarCloud analysis (main branch)
@@ -50,3 +53,43 @@ jobs:
           mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:5.3.0.6276:sonar \
             -Dsonar.token=$SONAR_TOKEN \
             -Dsonar.branch.name=${{ github.ref_name }}
+
+  # ===========================
+  #  FRONTEND (Angular)
+  # ===========================
+  frontend-analyze:
+    runs-on: ubuntu-latest
+    # optional: wait for backend job; remove "needs" if you want parallel
+    needs: backend-build-and-analyze
+    # only run for PRs and main pushes, same as backend
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref_name == 'main')
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm ci
+
+      - name: Run Angular unit tests with coverage
+        working-directory: frontend
+        run: npm test -- --watch=false --code-coverage
+        # or: npx ng test --watch=false --code-coverage
+
+      - name: SonarCloud Scan (frontend)
+        uses: SonarSource/sonarcloud-github-action@v3
+        with:
+          projectBaseDir: frontend
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # required by the action
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}     # same token you use for backend
