--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -8,4 +8,8 @@ sonar.sources=src
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
+# === Break when quality gate fails ===
+sonar.qualitygate.wait=true
+
+
 
