fix: exclude test files from sonar scan and coverage

--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -11,5 +11,10 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 # === Break when quality gate fails ===
 sonar.qualitygate.wait=true
 
+# === Exclude test files from analysis ===
+sonar.exclusions=**/*.spec.ts
+
+# === Exclude test files from coverage requirements ===
+sonar.coverage.exclusions=**/*.spec.ts
 
 
