--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -78,12 +78,12 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        working-directory: frontend
+        working-directory: ./frontend
         run: npm ci
 
       - name: Run Angular unit tests with coverage
-        working-directory: frontend
-        run: npm test -- --watch=false --coverage
+        working-directory: ./frontend
+        run: npm run test:coverage
 
       - name: SonarCloud Scan (frontend)
         uses: SonarSource/sonarcloud-github-action@v3
