debug: fixing sonar

--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -6,7 +6,9 @@ sonar.host.url=https://sonarcloud.io
 # === Where the frontend code lives (relative to frontend/) ===
 sonar.sources=src
 
+# Tell BOTH JS and TS analyzers where the LCOV file is
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # === Break when quality gate fails ===
 sonar.qualitygate.wait=true
